<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_forgot_password_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_fragment_line_up" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/forgot_password_title"
            android:textFontWeight="900"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="20dp"
            android:text="@string/activity_forgot_password_subtitle_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/hint_email"
            android:textFontWeight="900" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            style="@style/Theme.Button.Fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/con..."
            android:theme="@style/Theme.Button.Fill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/enter_code"
            android:textColor="@color/forgot_password_title"
            android:textFontWeight="900"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="20dp"
            android:text="@string/activity_forgot_password_subtitle_2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:expandedHintEnabled="false"
            app:prefixText="NN-">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapCharacters"
                android:maxLength="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            style="@style/Theme.Button.Fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/con..."
            android:theme="@style/Theme.Button.Fill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/reset_password"
            android:textColor="@color/forgot_password_title"
            android:textFontWeight="900"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="20dp"
            android:text="@string/activity_forgot_password_subtitle_3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/hint_password"
            android:textFontWeight="900" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/hint_confirm_password"
            android:textFontWeight="900" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            style="@style/Theme.Button.Fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:theme="@style/Theme.Button.Fill" />

    </LinearLayout>

</LinearLayout>